# seehtml-ai

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  setup_deps.ps1  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/seehtml-agents/: Cargo.toml
crates/seehtml-agents/src/: agent_loop.rs  content.rs  document.rs  export_agent.rs  lib.rs  media.rs  orchestrator.rs  publish.rs  style.rs
crates/seehtml-core/: Cargo.toml
crates/seehtml-core/src/: error.rs  lib.rs  types.rs
crates/seehtml-export/: Cargo.toml
crates/seehtml-export/src/: lib.rs  pptx.rs
docs/: MARKETING.md
python/: ocr_service.py
python/image-ocr/: SKILL.md  image-ocr  image-ocr.ps1  macos_vision_ocr.swift  ocr_image.py
scripts/: download-deps.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/agents/: AgentPanel.tsx  SkillsPanel.tsx
src/components/chat/: ChatInput.tsx  ChatPanel.tsx  CommandPalette.tsx  MessageItem.tsx  ProcessingTimeline.tsx
src/components/common/: Badge.tsx  Button.tsx  LoadingSpinner.tsx  Tooltip.tsx  index.ts
src/components/editor/: EditorPanel.tsx  HtmlPreview.tsx
src/components/file/: FileExplorer.tsx
src/components/layout/: ActivityRail.tsx  AppShell.tsx  Sidebar.tsx  StatusBar.tsx
src/components/settings/: ModelSettingsDialog.tsx
src/hooks/: index.ts  useAgents.ts  useDocument.ts  useWorkflow.ts
src/lib/: agentLoop.ts  commands.ts  format.ts  htmlElementPatch.ts  htmlPages.ts  htmlSkills.ts  i18n.ts  index.ts  longChainDisplay.ts  modelProviders.ts  mp4ExportProfiles.ts  projectPaths.ts  theme.ts  workspace.ts
src/stores/: chatStore.ts  previewStore.ts  uiStore.ts
src/types/: index.ts
tests/: htmlElementPatch.test.mjs  longChainDisplay.test.mjs
