[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/seehtml-core",
    "crates/seehtml-agents",
    "crates/seehtml-export",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
mime = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
