[package]
name = "seehtml-desktop"
version = "2.0.0"
description = "SeeHTML AI Desktop - Agent-powered HTML presentation tool"
authors = ["SeeHTML"]
edition = "2024"

[lib]
name = "seehtml_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-opener = { workspace = true }
seehtml-core = { path = "../crates/seehtml-core" }
seehtml-agents = { path = "../crates/seehtml-agents" }
seehtml-export = { path = "../crates/seehtml-export" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
