[package]
name = "seehtml-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
seehtml-core = { path = "../seehtml-core" }
seehtml-export = { path = "../seehtml-export" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
