[package]
name = "seehtml-export"
version = "0.1.0"
edition = "2024"

[dependencies]
seehtml-core = { path = "../seehtml-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
zip = "2"
